--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">weever</string>
     <string name="startlocation">开始定位</string>
     <string name="stoplocation">停止定位</string>
-    <string name="title_activity_login2">Sign in</string>
-    <string name="title_activity_address_selection">AddressSelectionActivity</string>
+    <string name="title_activity_login2">登录</string>
+    <string name="title_activity_address_selection">常用地址</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
 
