--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,14 @@
     <string name="ok">确定</string>
     <string name="hint">提示</string>
     <string name="cancel">取消</string>
+	
+	<string name="version_upgrade">版本升级</string>
+    <string name="about_we">关于我们</string>
+    <string name="log_out">退出登录</string>
+    <string name="update">立即更新</string>
+    <string name="soft_update_fail">更新失败</string>
+    <string name="soft_update_no">不需要更新</string>
+    <string name="soft_updating">更新中</string>
 
 
 </resources>
