--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,15 @@
     <string name="soft_update_no">不需要更新</string>
     <string name="soft_updating">更新中</string>
 
-
+    <!-- 下拉刷新，上拉加载更多 -->
+    <string name="pull_to_refresh_pull_label">下拉刷新</string>
+    <string name="pull_to_refresh_release_label">释放刷新</string>
+    <string name="pull_to_refresh_refreshing_label">正在更新数据</string>
+    <string name="pull_to_refresh_update">最后更新:</string>
+    <string name="pull_to_refresh_from_bottom_pull_label">上拉加载更多</string>
+    <string name="pull_to_refresh_from_bottom_release_label">松开后加载</string>
+    <string name="pull_to_refresh_from_bottom_refreshing_label">正在加载数据</string>
+    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
+    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
+    <string name="pull_to_refresh_footer_refreshing_label">加载中……</string>
 </resources>
