--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,8 +13,8 @@
     <string name="ok">确定</string>
     <string name="hint">提示</string>
     <string name="cancel">取消</string>
-	
-	<string name="version_upgrade">版本升级</string>
+
+    <string name="version_upgrade">版本升级</string>
     <string name="about_we">关于我们</string>
     <string name="log_out">退出登录</string>
     <string name="update">立即更新</string>
@@ -33,4 +33,7 @@
     <string name="pull_to_refresh_footer_release_label">松开后加载</string>
     <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
     <string name="pull_to_refresh_footer_refreshing_label">加载中……</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
