--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="select_order">请在我的订单 - 选择订单</string>
-    <string name="work_clock_in">上班打卡</string>
-    <string name="work_punch_out">下班打卡</string>
+    <string name="work_clock_in">绑定车辆</string>
+    <string name="work_punch_out">解绑车辆</string>
 </resources>
